# SoundNet

./: Cargo.toml  readme.md
docs/: TESTING.md  USAGE.md  plan.md  specification.md
docs/tasks/: task.1.1.md  task.1.2.md  task.1.3.md  task.2.1.md  task.2.2.md  task.2.3.md  task.3.1.md  task.3.2.md  task.3.3.md  task.4.1.md  task.4.2.md  task.4.3.md  task.4.4.md  task.5.1.md  task.5.2.md  task.5.3.md  task.6.1.md  task.6.2.md  task.6.3.md  task.6.4.md  task.6.5.md  task.7.1.md  task.7.2.md  task.7.3.md  task.7.4.md  task.7.5.md  task.8.1.md  task.8.2.md  task.8.3.md  task.8.4.md
packaging/: soundnet.service
soundnet/: Cargo.toml
soundnet-ctl/: Cargo.toml
soundnet-ctl/src/: lib.rs  main.rs
soundnet-types/: Cargo.toml
soundnet-types/src/: discovery.rs  lib.rs
soundnet/src/: jitter_buffer.rs  lib.rs  main.rs
soundnet/src/api/: mod.rs
soundnet/src/audio/: mod.rs
soundnet/src/discovery/: mod.rs
soundnet/src/network/: mod.rs  packet.rs
