[package]
name = "soundnet-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
soundnet-types = { path = "../soundnet-types" }
bincode = "1.3.3"
anyhow = "1.0"
socket2 = "0.5.0"