[package]
name = "soundnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "soundnet"
path = "src/lib.rs"

[[bin]]
name = "soundnet"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
soundnet-types = { path = "../soundnet-types" }
serde = { version = "1.0", features = ["derive"] }
cpal = "0.15.0"
ringbuf = "0.3.0"
anyhow = "1.0"